--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
+    <title>Sorting cards with Bubble algorithm</title>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
@@ -13,17 +13,21 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+    <div class="container-fluid">
+      <div class="selectCard position-absolute top-0 start-50 translate-middle">
+        Inicio:
+        <input type="text" class="amount" value="" />
+        <button class="drawBtn btn btn-primary" id="draw">Dibujar</button>
+        <button class="sortBtn btn btn-primary id="sort">Sort</button>
+        <button class="resetBtn btn btn-primary" id="reset">
+          Reset
+        </button>
       </div>
+      <div class="cardsDiv"></div>
+      <div class="bubbleLog">
+        Cartas
+      </div>
+      <div class="bubbleDiv"></div>
     </div>
   </body>
 </html>
